<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardCornerRadius="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     android:padding="10dp"

        android:background="@color/pale_ash">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/enter_student_name"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_mark1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/mark1"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />


        <EditText
            android:id="@+id/edt_mark2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/mark2"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_mark1" />

        <EditText
            android:id="@+id/edt_mark3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/mark3"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_mark2" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_mark3"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

